--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,7 +49,9 @@
       <div class="container nav-collapse">
         <ul class="nav">
           <!--<li><%#= link_to current_user.email, "/users/edit" %></li>-->
-          <li><%= link_to "Sign out", "/users/sign_out", :method => "DELETE"  %></li>
+          <% if user_signed_in? %>
+            <li><%= link_to "Sign out", "/users/sign_out", :method => "DELETE"  %></li>
+          <% end %>
           <a href="/twitter_oauth_url" class="btn btn-primary btn-larg">Connect to Twitter</a>
         </ul>
       </div><!--/.nav-collapse -->
