--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title><%= content_for?(:title) ? yield(:title) : "Abi-Tesing" %></title>
+  <title><%= content_for?(:title) ? yield(:title) : "Abi-Testing" %></title>
   <%= csrf_meta_tags %>
 
   <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
@@ -45,12 +45,13 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </a>
-      <a class="brand" href="#">Abi-Tesing</a>
+      <a class="brand" href="#">Abi-Testing</a>
       <div class="container nav-collapse">
         <ul class="nav">
           <!--<li><%#= link_to current_user.email, "/users/edit" %></li>-->
           <li><%= link_to "Sign out", "/users/sign_out", :method => "DELETE"  %></li>
-          <a href="/twitter_oauth_url" class="btn btn-primary btn-larg">Connect to Twitter</a>
+          <a href="/twitter_oauth_url" class="btn btn-primary btn-larg">Fetch Twitter Details</a>
+          <a href="/facebook" class="btn btn-primary btn-larg">Fetch Facebook Details</a>
         </ul>
       </div><!--/.nav-collapse -->
     </div>
